--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ authors = ["_Counter021_"]
 [tool.poetry.dependencies]
 python = "^3.8"
 fastapi = {extras = ["all"], version = "^0.68.0"}
+psycopg2-binary = "^2.9.1"
+SQLAlchemy = "^1.4.22"
+asyncpg = "^0.24.0"
 
 [tool.poetry.dev-dependencies]
 
