--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ fastapi = {extras = ["all"], version = "^0.68.0"}
 psycopg2-binary = "^2.9.1"
 SQLAlchemy = "^1.4.22"
 asyncpg = "^0.24.0"
+pydantic = {extras = ["email"], version = "^1.8.2"}
+bcrypt = "^3.2.0"
+passlib = "^1.7.4"
+emails = "^0.6"
 
 [tool.poetry.dev-dependencies]
 
