--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pydantic = {extras = ["email"], version = "^1.8.2"}
 bcrypt = "^3.2.0"
 passlib = "^1.7.4"
 emails = "^0.6"
+coverage = "^5.5"
 
 [tool.poetry.dev-dependencies]
 
