--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ bcrypt = "^3.2.0"
 passlib = "^1.7.4"
 emails = "^0.6"
 PyJWT = "^2.1.0"
+celery = "^5.1.2"
+redis = "^3.5.3"
 
 [tool.poetry.dev-dependencies]
 coverage = "^5.5"
