--- a/app/config/config.docker.example.env
+++ b/app/config/config.docker.example.env
@@ -14,3 +14,6 @@ SMTP_PASSWORD=<google-password>
 USERNAME_ADMIN=<admin-username>
 EMAIL_ADMIN=<admin-email>
 PASSWORD_ADMIN=<admin-password>
+
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND=redis://redis:6379/0
