--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,6 +1,6 @@
 
-upstream api {
-    server api:8000;
+upstream frontend {
+    server frontend:3000;
 }
 
 server {
@@ -9,7 +9,7 @@ server {
     server_name 127.0.0.1;
 
     location / {
-        proxy_pass http://api;
+        proxy_pass http://frontend;
         proxy_redirect off;
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
