--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
       - postgres
     ports:
       - "8000:8000"
-    command: poetry run uvicorn app.app:app --host 0.0.0.0 --port 8000 --reload
+    command: uvicorn app.app:app --host 0.0.0.0 --port 8000 --reload
     volumes:
       - ./:/site
 
@@ -56,7 +56,7 @@ services:
 
   worker:
     build: ./
-    command: poetry run celery -A app.tasks.celery worker -l INFO
+    command: celery -A app.tasks.celery worker -l INFO
     volumes:
       - ./:/site
     environment:
