--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,7 @@ psycopg2-binary==2.9.1
 pycparser==2.20
 pydantic==1.8.2
 PyJWT==2.1.0
+pyotp==2.6.0
 python-dateutil==2.8.2
 python-dotenv==0.19.0
 python-multipart==0.0.5
