--- a/app/config/config.example.env
+++ b/app/config/config.example.env
@@ -17,3 +17,6 @@ PASSWORD_ADMIN=<admin-password>
 
 CELERY_BROKER_URL=redis://redis:6379/0
 CELERY_RESULT_BACKEND=redis://redis:6379/0
+
+GOOGLE_CLIENT_ID=<google-app-id>
+GOOGLE_CLIENT_SECRET=<google-app-secret>
