--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 aiofiles==0.5.0
 amqp==5.0.6
 aniso8601==7.0.0
+anyio==3.3.0
 async-exit-stack==1.0.1
 async-generator==1.10
 asyncpg==0.24.0
+Authlib==0.15.4
 bcrypt==3.2.0
 billiard==3.6.4.0
 cachetools==4.2.2
@@ -17,6 +19,7 @@ click-didyoumean==0.0.3
 click-plugins==1.1.1
 click-repl==0.2.0
 coverage==5.5
+cryptography==3.4.7
 cssselect==1.1.0
 cssutils==2.3.0
 dnspython==2.1.0
@@ -28,7 +31,9 @@ graphql-core==2.3.2
 graphql-relay==2.0.1
 greenlet==1.1.1
 h11==0.12.0
+httpcore==0.13.6
 httptools==0.1.2
+httpx==0.18.0
 idna==3.2
 itsdangerous==1.1.0
 Jinja2==2.11.3
@@ -52,8 +57,10 @@ pytz==2021.1
 PyYAML==5.4.1
 redis==3.5.3
 requests==2.26.0
+rfc3986==1.5.0
 Rx==1.6.1
 six==1.16.0
+sniffio==1.2.0
 SQLAlchemy==1.4.23
 starlette==0.14.2
 typing-extensions==3.10.0.0
