--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
       - postgres
     ports:
       - "8000:8000"
-    command: uvicorn app.app:app --host 0.0.0.0 --port 8000 --reload
+    command: uvicorn app.app:app --host 0.0.0.0 --port 8000
     volumes:
       - ./:/site
 
