--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     volumes:
       - ./docker/postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
-      - "5432:5432"
+      - "5433:5433"
 
   frontend:
     build:
@@ -38,7 +38,7 @@ services:
       - postgres
     ports:
       - "8000:8000"
-    command: uvicorn app.app:app --host 0.0.0.0 --port 8000
+    command: uvicorn app.app:app --host 0.0.0.0 --port 8000 --log-config logger.yml
     volumes:
       - ./:/site
 
